--- a/package.json
+++ b/package.json
@@ -7,21 +7,31 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --check .",
+    "format:fix": "prettier --write .",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "pinia": "^3.0.3",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.10",
+    "@babel/eslint-parser": "^7.17.0",
     "@eslint/js": "^9.29.0",
     "@vitejs/plugin-vue": "^6.0.0",
+    "@vue/babel-preset-app": "^5.0.4",
     "@vue/eslint-config-prettier": "^10.2.0",
     "eslint": "^9.29.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-vue": "~10.2.0",
+    "gh-pages": "^6.3.0",
     "globals": "^16.2.0",
     "prettier": "3.5.3",
+    "sass": "^1.89.2",
     "vite": "^7.0.0",
     "vite-plugin-vue-devtools": "^7.7.7"
   }
