--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "e-portfolio",
   "version": "0.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -15,8 +14,7 @@
   },
   "dependencies": {
     "pinia": "^3.0.3",
-    "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "vue": "^3.5.17"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
