--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "deploy": "gh-pages -d dist"
     },
     "dependencies": {
+        "@emailjs/browser": "^4.4.1",
         "@vueuse/core": "^13.8.0",
         "@vueuse/motion": "^3.0.3",
         "pinia": "^3.0.3",
