fix: fixed unresolving paths in deployment workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,11 +26,11 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
-          cache-dependency-path: client/package-lock.json
+          cache-dependency-path: e-portfolio/package-lock.json
 
       - name: Install dependencies
         run: npm install
-        working-directory: ./client
+        working-directory: ./e-portfolio
 
       - name: Build application
         run: |
@@ -48,7 +48,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./client/dist
+          path: ./e-portfolio/dist
 
       - name: Deploy to GitHub Pages
         id: deployment
