fix: fixed unresolving paths in deployment workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,17 +26,14 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
-          cache-dependency-path: e-portfolio/package-lock.json
+          cache-dependency-path: package-lock.json
 
       - name: Install dependencies
         run: npm install
-        working-directory: ./e-portfolio
 
       - name: Build application
         run: |
           npm run build
-          cp ./dist/index.html
-        working-directory: ./e-portfolio
         env:
           VITE_SERVICE_ID: ${{ vars.VITE_SERVICE_ID }}
           VITE_TEMPLATE_ID: ${{ vars.VITE_TEMPLATE_ID }}
@@ -48,7 +45,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./e-portfolio/dist
+          path: ./dist
 
       - name: Deploy to GitHub Pages
         id: deployment
