update: updated font for reaction project

--- a/src/assets/data/projects.json
+++ b/src/assets/data/projects.json
@@ -13,7 +13,7 @@
                 "Integrated a PostgreSQL database using Prisma ORM to store user accounts and game history."
             ]
         },
-        "fontFamily": "Poppins",
+        "fontFamily": "Autowide",
         "img": "reaction.png",
         "video": "1119895851",
         "externalLinks": {
