feat: added everything for tally, except links for demo-vid

--- a/src/assets/data/projects.json
+++ b/src/assets/data/projects.json
@@ -1,7 +1,66 @@
 [
     {
+        "title": "Tally",
+        "slug": "tally",
+        "wip": true,
+        "stackText": [
+            "Vue",
+            "Typescript",
+            "Ionic",
+            "Node",
+            "Socket.IO",
+            "Prisma",
+            "Zod",
+            "Vitest",
+            "Cypress",
+            "Express",
+            "Postgres",
+            "Sass",
+            "GSAP"
+        ],
+        "stack": [
+            "vue",
+            "typescript",
+            "ionic",
+            "node",
+            "socket",
+            "prisma",
+            "zod",
+            "vitest",
+            "cypress",
+            "express",
+            "postgres",
+            "sass",
+            "gsap"
+        ],
+        "date": "January 2025",
+        "dateRange": "January 2025 - Present",
+        "description": {
+            "short": "A cross-platform offline-first application utilizing a custom synchronization queue for network resilience, featuring real-time shared counters and native deep linking integration.",
+            "long": [
+                "Architected an offline-first cross-platform mobile application featuring optimistic UI updates, a persistent sync queue with idempotency, and automatic retry with error classification.",
+                "Implemented access/refresh token authentication with rotation, supporting dual delivery (HttpOnly cookies for web, secure storage for native) and transparent token refresh with concurrent request deduplication.",
+                "Built real-time shared counter collaboration using Socket.IO with server-controlled participant broadcasting, Prisma ORM with PostgreSQL, and Zod schema validation shared across client and server via automated type sync."
+            ]
+        },
+        "fontFamily": "ClashDisplay",
+        "img": "reaction_blurred.webp",
+        "video": "1149531486",
+        "externalLinks": {
+            "github": { "href": "https://github.com/michaelgreenl/tally-tracker-client", "text": "Repository" },
+            "demoVideo": {
+                "href": "https://michaelgreenl.net/#projects?slug=tally&autoplay=true",
+                "text": "Demo Video"
+            },
+            "porfolioLink": {
+                "href": "https://michaelgreenl.net/#projects?slug=tally&autoplay=false"
+            }
+        }
+    },
+    {
         "title": "Reaction",
         "slug": "reaction",
+        "wip": false,
         "stackText": ["Vue", "Pinia", "Sass", "GSAP", "Node", "Sequelize", "Express", "Postgres"],
         "stack": ["vue", "pinia", "sass", "gsap", "node", "sequelize", "express", "postgres"],
         "date": "September 2025",
@@ -32,6 +91,7 @@
     {
         "title": "GameLobby",
         "slug": "game-lobby",
+        "wip": false,
         "stackText": ["Vue", "Socket.IO", "Pinia", "Prisma", "Postgres", "Node", "Sass"],
         "stack": ["vue", "socket", "pinia", "prisma", "postgres", "node", "sass"],
         "date": "June 2025",
@@ -62,6 +122,7 @@
     {
         "title": "AlgoVisualizer",
         "slug": "algo-visualizer",
+        "wip": false,
         "stackText": ["Vue", "Nuxt", "GSAP", "Pinia", "Sass", "Node"],
         "stack": ["vue", "nuxt", "gsap", "pinia", "sass", "node"],
         "date": "May 2022",
