feat: added tally video data + image, and aspect ratio to project card images

--- a/src/assets/data/projects.json
+++ b/src/assets/data/projects.json
@@ -43,8 +43,8 @@
             ]
         },
         "fontFamily": "ClashDisplay",
-        "img": "reaction_blurred.webp",
-        "video": "1149531486",
+        "img": "tally_blurred.webp",
+        "video": "1166819858",
         "externalLinks": {
             "github": { "href": "https://github.com/michaelgreenl/tally-tracker-client", "text": "Repository" },
             "demoVideo": {
